<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:background="@color/white"
    tools:context=".Activity.EntryPoint.EmailLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <ImageView
            android:id="@+id/bg_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg_new" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:src="@drawable/fdxlogo" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".54"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Log in"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".46"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Log In to enter your account"
                    android:textSize="16sp"
                    android:textColor="#999999"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:background="@drawable/rounded_corner_edit_txt"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="Mobile Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:textSize="14sp"
                        android:textColorHint="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="30dp"
                    android:padding="4dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/rounded_corner_edit_txt"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:textSize="14sp"
                        android:textColorHint="@color/black"/>
                </LinearLayout>




                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="35dp">

                    <TextView
                        android:id="@+id/tvForgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rounded_corner_orange_bg"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?  "
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvRegisterNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_now"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By tapping ‘Log In’ you agree to our"
            android:gravity="center"
            android:textColor="#999999"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTc"
                android:text="@string/terms"
                android:textColor="#F05225"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" &amp; "
                android:textColor="#999999"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPrivacy"
                android:text="@string/policy"
                android:textColor="#F05225"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>