<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.EntryPoint.Register">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <RelativeLayout
                    android:id="@+id/headBannerRl"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/register_bg"
                        android:visibility="gone" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/header_rl"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_back" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/head_container_rl"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_rl"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:padding="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/icon_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="16dp"
                        android:elevation="1dp"
                        android:src="@drawable/fdxlogo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icon_img"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Register Now"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="Register now to "
                            android:textColor="#999999"
                            android:textSize="16sp"
                            android:visibility="gone" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="create your account"
                            android:textColor="#999999"
                            android:textSize="16sp"
                            android:visibility="gone" />

                    </LinearLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/headBannerRl"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingTop="8dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/goToLoginLL">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:hint="Name"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:hint="Phone Number"
                        android:textColorHint="@color/black"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:hint="Email Id"
                        android:inputType="textEmailAddress"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Date of birth"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_dob"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/orange_border_et_bg"
                        android:drawableRight="@drawable/ic_calendar"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:text="DD/MM/YYYY"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Gender"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_spinner_bg"
                        android:entries="@array/gender"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:visibility="gone" />


                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:hint="Password"
                        android:textColorHint="@color/black"
                        android:inputType="textPassword"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etPassConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:hint="Confirm Password"
                        android:textColorHint="@color/black"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etReferralCode"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_corner_edit_txt"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:hint="Referral Code"
                        android:textColorHint="@color/black"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="15dp"
                        android:background="@drawable/rounded_corner_orange_bg"
                        android:text="Sign Up"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Already have an account? "
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvLoginNow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/login_txt"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp" />


                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/goToLoginLL"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="By tapping ‘Sign Up’ you agree to our"
                        android:gravity="center"
                        android:textColor="#999999"
                        android:textSize="12sp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTc"
                            android:text="@string/terms"
                            android:textColor="#F05225"
                            android:textSize="13sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" &amp; "
                            android:textColor="#999999"
                            android:textSize="12sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvPrivacy"
                            android:text="@string/policy"
                            android:textColor="#F05225"
                            android:textSize="13sp"/>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>